# AOC_2025

./: .clang-format  .gitignore  README.md  meson.build
inc/: adventTypedef.h  argumentParsing.h  d01.h  d02.h  d03.h  d04.h  d05.h  d06.h  d07.h  evaluator.h  template.h
src/: argumentParsing.cpp  d01.cpp  d02.cpp  d03.cpp  d04.cpp  d05.cpp  d06.cpp  d07.cpp  evaluator.cpp  main.cpp  template.cpp
subprojects/: adventUtility.wrap
utility/: meson.build
utility/inc/: stringUtils.h
utility/inc/utility/: fileOps.h  point.h
utility/src/: fileOps.cpp  point.cpp  stringUtils.cpp
